--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -14,3 +14,26 @@ html, body {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+.animated-background {
+    animation-duration: 700ms;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: placeHolderShimmer;
+    animation-timing-function: linear;
+    background: linear-gradient(to right, rgba(238, 238, 238, 0.1) 10%, rgba(221, 221, 221, 0.25) 18%, rgba(238, 238, 238, 0.1) 33%);
+    background-size: 800px 104px;
+    border-radius: 20rem;
+}
+
+.blur-background{
+    backdrop-filter: blur(5px);
+}
+
+@keyframes placeHolderShimmer{
+    0%{
+        background-position: -468px 0
+    }
+    100%{
+        background-position: 468px 0
+    }
+}
