--- a/webroot/css/home.css
+++ b/webroot/css/home.css
@@ -1,6 +1,20 @@
 html, body {
     background-color: #222436 !important;
+    height: 100%;
 }
+
+
+main{
+    height: 100%;
+}
+
+@media (min-width: 576px) {
+    main{
+        height: 100%;
+        overflow: hidden;
+    }
+}
+
 
 /* Home page styles */
 @font-face {
@@ -78,4 +92,61 @@ html, body {
     backdrop-filter: blur(5.7px);
     -webkit-backdrop-filter: blur(5.7px);
     border: 1px solid rgba(255, 255, 255, 0.22);
+}
+
+.card-effect{
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    -o-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+}
+
+
+.card-effect > img{
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    -o-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+}
+
+.card-effect:hover {
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    -o-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+    background: linear-gradient(45deg, rgba(255,255,255,0) 0%, rgba(255, 255, 255, 0.33) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100%); /* W3C */
+    background-blend-mode: color;
+}
+
+.card-effect > a {
+    transition: all 0.2s ease-in;
+    height: 0px;
+    padding : 0px;
+    color : transparent;
+}
+
+.card-effect:hover > a {
+    transition: all 0.2s ease-in;
+    height: 3rem;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    padding-top: 0.60rem;
+    color : var(--bs-light);
+}
+
+.card-effect:hover > a:hover {
+    color : var(--bs-dark);
+}
+
+
+.card-effect:hover > img {
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    -o-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+    width: 20rem;
+}
+
+.center-placeholder::placeholder{
+    text-align: center;
 }
