--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -24,9 +24,8 @@ html, body {
     background: linear-gradient(to right, rgba(238, 238, 238, 0.1) 10%, rgba(221, 221, 221, 0.25) 18%, rgba(238, 238, 238, 0.1) 33%);
     background-size: 800px 104px;
     border-radius: 20rem;
+    color : transparent !important;
 }
-
-
 
 .blur-background{
     backdrop-filter: blur(5px);
